# Teacher-Backend

./: .env.eample  .gitignore  Dockerfile  auth.py  compose.yml  database.py  gcpUpload.py  generate_questions.py  json_parsor.py  model.py  pyproject.toml  readme.md  server.py  server_start.sh  templates.py
controllers/: assignment.py  auth.py  classes.py  greet.py  materials.py  sections.py  students.py  tests.py
helper/: gcpUpload.py  generate_questions.py  model.py  pdfparser.py
