[tool.poetry]
name = "teacher-backend"
version = "0.1.0"
description = ""
authors = ["avinash8419 <avihanvaisri@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
requests = "^2.32.3"
flask-sqlalchemy = "^3.1.1"
pyodbc = "^5.1.0"
pymssql = "^2.3.0"
mysql-connector-python = "^9.0.0"
langchain = "^0.2.7"
langchain-community = "^0.2.7"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
